# modelscan

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  malicious0.pt  pyproject.toml
.devcontainer/: aws_secrets_example  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue-report.md  feature_request.md
.github/workflows/: bandit.yml  black.yml  build.yml  codeql.yml  mypy.yml  publish.yml  test.yml
docs/: CodeInjectionAttacks.md  SeverityLevels.md  model_serialization_attacks.md  severity_levels.md
examples/: keras_fashion_mnist.ipynb  pytorch_sentiment_analysis.ipynb  tensorflow_fashion_mnist.ipynb  xgboost_diabetes_classification.ipynb
examples/utils/: pickle_codeinjection.py  tensorflow_codeinjection.py
modelscan/: __init__.py  cli.py  error.py  issues.py  model.py  modelscan.py  reports.py  settings.py  skip.py  utils.py
modelscan/middlewares/: __init__.py  format_via_extension.py  middleware.py
modelscan/models/: __init__.py  scan.py
modelscan/models/h5/: scan.py
modelscan/models/keras/: scan.py
modelscan/models/pickle/: scan.py
modelscan/models/saved_model/: scan.py
modelscan/scanners/: __init__.py  scan.py
modelscan/scanners/generic/: scan.py
modelscan/scanners/h5/: scan.py
modelscan/scanners/keras/: scan.py
modelscan/scanners/pickle/: scan.py
modelscan/scanners/safetensor/: scan.py
modelscan/scanners/saved_model/: scan.py
modelscan/tools/: LICENSE  cli_utils.py  picklescanner.py  utils.py
notebooks/: README.md  keras_fashion_mnist.ipynb  pytorch_sentiment_analysis.ipynb  tensorflow_fashion_mnist.ipynb  xgboost_diabetes_classification.ipynb
notebooks/utils/: pickle_codeinjection.py  pytorch_sentiment_model.py  tensorflow_codeinjection.py  tensorflow_fashion_mnist_model.py  xgboost_diabetes_model.py
tests/: test_modelscan.py  test_utils.py  utils.py
tests/data/: unsafe_zip_pytorch.pt
tests/pickle_utils/: codeinjection.py
