[tool.poetry]
name = "modelscan"
version = "0.0.0"
description = "The modelscan package is a cli tool for detecting unsafe operations in model files across various model serialization formats."
authors = ["ProtectAI <community@protectai.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "modelscan" }]
exclude = ["tests/*", "Makefile"]

[tool.poetry.scripts]
modelscan = "modelscan.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
click = "^8.1.3"
numpy = "1.24.0"
rich = "^13.4.2"
tomlkit = "^0.12.3"
h5py = { version = "^3.9.0", optional = true }

# TODO: Add py3.12 once TF release supports
tensorflow = { version = "^2.13.0", optional = true, python = "<3.12" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", optional = true, python = "<3.12" }
tensorflow-io-gcs-filesystem = { version = ">=0.23.1,<0.35", optional = true, python = "<3.12" }

[tool.poetry.extras]
tensorflow = ["tensorflow", "tensorflow-macos"]
h5py = ["h5py"]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov= "^5.0.0"
bandit = { version = "1.7.8", extras = ["toml"] }
mypy = "^1.4.1"
requests = "^2.31.0"
aiohttp = "^3.8.5"
dill = "^0.3.7"
types-requests = ">1.26"
torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
dunamai = "^1.18.0"
pre-commit = "^3.3.3"
black = ">=23.7,<25.0"

[tool.poetry.group.prod.dependencies]
dunamai = "^1.18.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]

[tool.mypy]
exclude = ["notebooks"]
